[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Logging utilities for crates in the Autonomi repository"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "ant-logging"
readme = "README.md"
repository = "https://github.com/maidsafe/autonomi"
version = "0.2.45"

[dependencies]
chrono = "~0.4.19"
dirs-next = "~2.0.0"
file-rotate = "0.7.3"
rand = { version = "~0.8.5", features = ["small_rng"], optional = true }
serde = { version = "1.0.133", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
sysinfo = { version = "0.30.8", default-features = false, optional = true }
thiserror = "1.0.23"
tokio = { version = "1.32.0", optional = true }
tracing = { version = "~0.1.26" }
tracing-appender = "~0.2.0"
tracing-core = "0.1.30"
tracing-subscriber = { version = "0.3.16", features = ["json"] }

[dev-dependencies]
color-eyre = "0.6.3"
tracing-test = "0.2.4"

[features]
process-metrics = ["sysinfo", "tokio"]
test-utils = []

[lints]
workspace = true